Implement the delete functionality, next need to write the test
