# upload_api/upload_stack/swagger.yaml
@@ -79,3 +79,85 @@ paths:
         passthroughBehavior: "when_no_templates"
         requestTemplates:
           application/json: " #set($allParams = $input.params()) { \"body\" : $input.json('$'), \"params\" : { #foreach($type in $allParams.keySet()) #set($params = $allParams.get($type)) \"$type\" : { #foreach($paramName in $params.keySet()) \"$paramName\" : \"$util.escapeJavaScript($params.get($paramName))\" #if($foreach.hasNext),#end #end } #if($foreach.hasNext),#end #end }}"
+
+
+  /upload/{filename}:
+    options:
+      responses:
+        200:
+          description: "Success"
+          headers:
+            Access-Control-Allow-Headers:
+              type: string
+            Access-Control-Allow-Methods:
+              type: string
+            Access-Control-Allow-Origin:
+              type: string
+          schema:
+            $ref: "#/definitions/Empty"
+      x-amazon-apigateway-integration:
+        contentHandling: CONVERT_TO_TEXT
+        type: "mock"
+        httpMethod: "POST"
+        requestTemplates:
+           "application/json": "{\"statusCode\": 200}"
+        responses:
+          default:
+            statusCode: 200
+            responseParameters:
+              method.response.header.Access-Control-Allow-Methods: "'GET,POST,DELETE,OPTIONS'"
+              method.response.header.Access-Control-Allow-Headers: "'Content-Type,Authorization,X-Amz-Date,X-Api-Key,X-Amz-Security-Token'"
+              method.response.header.Access-Control-Allow-Origin: "'*'"
+
+    delete:
+      tags:
+        - "products"
+      summary: "return snotel data by location ID"
+      description: "Returns snotel data for a single location over range of dates specified by query params"
+      operationId: "getSnotelByLocation"
+      produces:
+        - "application/json"
+
+      parameters:
+        - name: "filename"
+          in: "path"
+          description: "filename to delete "
+          required: true
+          type: "string"
+
+      responses:
+        200:
+          description: "Success"
+          schema:
+            $ref: "#/definitions/Empty"
+          headers:
+            Access-Control-Allow-Origin:
+              type: string
+#        403:
+#          description: "Failure"
+#          schema:
+#            $ref: "#/definitions/Empty"
+#          headers:
+#            Access-Control-Allow-Origin:
+#              type: string
+
+      # For AWS Integration
+      x-amazon-apigateway-request-validators:
+        basic:
+          validateRequestParameters: true
+      x-amazon-apigateway-integration:
+        type: "aws"
+        httpMethod: "POST"
+        # Replace AWS_REGION and ACCOUNT_ID in uri
+        uri: "arn:aws:apigateway:us-west-2:lambda:path/2015-03-31/functions/arn:aws:lambda:us-west-2:710339184759:function:DeleteUploadFunction/invocations"
+
+        responses:
+          default:
+            statusCode: 200
+            responseParameters:
+              method.response.header.Access-Control-Allow-Origin: "'*'"
+#            responseTemplates:
+#              application/json: "#set($inputRoot = $input.path('$')) #if($inputRoot.toString().contains(\"error\")) #set($context.responseOverride.status = 403)  \"error\": \"$inputRoot.body\" #end $input.json(\"$\")"
+        passthroughBehavior: "when_no_templates"
+        requestTemplates:
+          application/json: " #set($allParams = $input.params()) { \"body\" : $input.json('$'), \"params\" : { #foreach($type in $allParams.keySet()) #set($params = $allParams.get($type)) \"$type\" : { #foreach($paramName in $params.keySet()) \"$paramName\" : \"$util.escapeJavaScript($params.get($paramName))\" #if($foreach.hasNext),#end #end } #if($foreach.hasNext),#end #end }}"
